# ElectronicsInventorySystem

./: .gitignore  .sample.env  Dockerfile  Makefile  README.md  docker-compose.yml  feature_planning.md  openapi.py  pyproject.toml
electronic_inv_sys/: __init__.py  main.py  services.py  util.py
electronic_inv_sys/contracts/: digikey_api.py  models.py  readme.md  repos.py
electronic_inv_sys/contracts/digikey_models/: __init__.py  barcoding.py  packlist.py  product_search.py
electronic_inv_sys/infrastructure/: digikey_api.py  digikey_mappers.py  env_config.py
electronic_inv_sys/infrastructure/db/: in_memory.py  json_file.py
electronic_inv_sys/infrastructure/db/mongodb/: __init__.py  bom_repo.py  inventory_repo.py  metadata_repo.py  mixin.py  models.py
electronic_inv_sys/infrastructure/metadata_store/: __init__.py
electronic_inv_sys/logic/: bom.py  bom_matching.py  details_update.py
electronic_inv_sys/logic/importer/: __init__.py  mapping.py  merge.py
electronic_inv_sys/web_api/: __init__.py  api_models.py  common_commands.py  english_utils.py  iphone.py
tests/: mocks.py  test_api_integration.py  test_main.py
tests/inventory_repo/: test_in_memory.py
ui/: .gitignore  Makefile  package-lock.json  package.json
ui/openapi/: inventory.json
ui/src/: Header.tsx  client.ts  globalVar.ts  index.css  index.tsx  utils.ts
ui/src/pages/: BOM.tsx  BomFormPage.tsx  BomViewPage.tsx  Inventory.tsx
ui/src/pages/bom_components/: BomEntryEditor.tsx  BomEntryTable.tsx  BomForm.tsx  BomUpload.tsx  InventoryItemSelector.tsx
ui/src/pages/components/: Html5QrCodePlugin.tsx  SlotIdSelect.tsx
ui/src/pages/inventory_components/: OneRow.tsx  client.ts  utils.ts
